--- a/src/SignIn/signIn.css
+++ b/src/SignIn/signIn.css
@@ -97,13 +97,16 @@ form > Button {
 @media screen and (max-width: 750px) {
   .text-container {
         text-align: center;
-        padding: 0;
+        padding: 10px;
+    }
+    .sign-in-container{
+        flex-direction: column;
     }
 
     .form-container {
         display: flex;
-        flex-direction: column;
-        margin: auto;
+
+        margin:20px auto ;
         justify-content: center;
         text-align: center;
     }
